# django-commission-field

./: .travis.yml  CONTRIBUTING.md  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
commission_field/: __init__.py  apps.py  strategy.py
commission_field/db/: descriptors.py  fields.py
docs/: Makefile
docs/source/: conf.py  index.rst
tests/: __init__.py  apps.py  models.py  test_generic.py
tests/settings/: dev.py
