[bumpversion]
current_version = 0.0.1
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.cfg]

[bumpversion:file:setup.py]
[bumpversion:file:docs/source/conf.py]

[bumpversion:file:commission_field/__init__.py]

[wheel]
universal = 1

[flake8]
ignore = D203
exclude =
	commission_field/migrations/,
	.git/,
	.tox/,
	docs/,
	build/,
	dist/
max-line-length = 99

